--- a/JavaScript/neon_pi/package.json
+++ b/JavaScript/neon_pi/package.json
@@ -6,18 +6,18 @@
   "bin": "build/index.js",
   "author": "tuckerstrausbaugh",
   "license": "MIT",
-  "dependencies": {
-    "chalk": "^2.4.1",
-    "commander": "^2.18.0"
-  },
   "pkg": {
     "scripts": "build/**/*.js"
   },
   "scripts": {
-    "install": "./node_modules/.bin/tsc && ./node_modules/.bin/neon build --release",
+    "install": "tsc && neon build --release",
     "start": "node .",
     "pkg": "pkg . --out-path dist && copyfiles native/index.node dist",
     "test": "cd native && cargo test --release"
+  },
+  "dependencies": {
+    "chalk": "^2.4.1",
+    "commander": "^2.18.0"
   },
   "devDependencies": {
     "@types/node": "^10.9.4",
